--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ body {
 
 img {
   max-width: 100%;
-  max-height: 100%;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -1626,6 +1625,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .footer__info {
