--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -138,6 +138,7 @@
     font-size: 12px
     line-height: 15px
     color: $light
+    cursor: pointer
   &__info
     font-style: normal
     font-weight: bold
